fix to make popovers work inside overflow hidden

--- a/src/styles/components/popover/popover.css
+++ b/src/styles/components/popover/popover.css
@@ -1,12 +1,12 @@
-.popover-container {
-    position: relative;
-    z-index: 0;
+.popover-position {
+    position: absolute;
+    height: 0;
+    display: inline;
 }
-
 .popover-content {
     position: absolute;
-    bottom: 25px;
     left: 0;
+    bottom: .75em;
     background: var(--pale);
     border-radius: 4px;
     padding: 10px;
@@ -18,7 +18,7 @@
     content: '';
     display: block;
     position: absolute;
-    bottom: -8px;
+    bottom: -7px;
     left: 15px;
     width: 0;
     height: 0;
