--- a/src/styles/components/tooltip/tooltip.css
+++ b/src/styles/components/tooltip/tooltip.css
@@ -41,7 +41,7 @@
         top: 25%;
         bottom: auto;
     }
-    .tooltip[data-tooltip]:hover:after {
+    .tooltip[data-tooltip]:hover:before {
         display: none;
     }
 }
